--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,600,600i&amp;subset=latin-ext" rel="stylesheet" />
 <!--<link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />-->
-<link rel="stylesheet" type="text/css" href="css/oslohavn1798.css" />
+<link rel="stylesheet" type="text/css" href="css/oslohavn1798.min.css" />
 <link rel="stylesheet" type="text/css" href="css/perfect-scrollbar.css" />
 
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1" />
